# mini_gl_fb

./: CHANGELOG.md  Cargo.toml  README.md
examples/: black_and_white.rs  custom_shaders.rs  game_of_life.rs  glutin_breakout.rs  multi_window.rs  resizable.rs  scaled_buffer.rs  window.rs  wrong_sized_buffer.rs
src/: breakout.rs  config.rs  core.rs  default_fragment_shader.glsl  default_vertex_shader.glsl  grayscale_fragment_shader.glsl  lib.rs
