[package]
name = "mini_gl_fb"
version = "0.5.1"
authors = ["shivshank"]
description = "Quick and easy window creation, input, and high speed bitmap rendering"
repository = "https://github.com/shivshank/mini_gl_fb"

license = "MIT"

keywords = ["opengl", "windowing", "framebuffer", "window"]
categories = ["rendering", "graphics"]
readme = "README.md"

[dependencies]
glutin = "0.17.0"
gl = "0.10.0"
rustic_gl = "0.3.2"
