[package]
name = "mini_gl_fb"
version = "0.9.0"
authors = ["shivshank"]
description = "Quick and easy window creation, input, and high speed bitmap rendering"
repository = "https://github.com/shivshank/mini_gl_fb"
edition = "2018"

license = "MIT"

keywords = ["opengl", "windowing", "framebuffer", "window"]
categories = ["rendering"]
readme = "README.md"

[dependencies]
glutin = "0.26.0"
gl = "0.10.0"
rustic_gl = "0.3.2"
derive_builder = "0.10.0-alpha"
